tests/ui/rfc-2632-const-trait-impl/default-method-body-is-const-body-checking.stderr
error[E0277]: the trait bound `(): ~const Tr` is not satisfied
  --> $DIR/default-method-body-is-const-body-checking.rs:12:15
   |
LL |         foo::<()>();
   |               ^^ the trait `~const Tr` is not implemented for `()`
   |
note: the trait `Tr` is implemented for `()`, but that implementation is not `const`
  --> $DIR/default-method-body-is-const-body-checking.rs:12:15
   |
LL |         foo::<()>();
   |               ^^
note: required by a bound in `foo`
  --> $DIR/default-method-body-is-const-body-checking.rs:7:28
   |
LL | const fn foo<T>() where T: ~const Tr {}
   |                            ^^^^^^^^^ required by this bound in `foo`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
